# GameEngine

./: .gitignore  .gitmodules  CMakeLists.txt  build-window.bat
Engine/: CMakeLists.txt
Engine/VIEngine/: Base.h  pch.cpp  pch.h
Engine/VIEngine/Animation/: Animation.cpp  Animation.h  AnimationResourceManager.cpp  AnimationResourceManager.h
Engine/VIEngine/Core/: Application.cpp  Application.h  Entry.h  GlobalMemory.cpp  GlobalMemory.h  Time.h
Engine/VIEngine/Core/Cast/: Cast.h
Engine/VIEngine/Core/Component/: AnimatorComponent.cpp  AnimatorComponent.h  Component.h  DirtySpriteComponent.cpp  DirtySpriteComponent.h  InfoComponent.cpp  InfoComponent.h  SpriteComponent.cpp  SpriteComponent.h  StateCachingComponent.cpp  StateCachingComponent.h  TransformComponent.cpp  TransformComponent.h
Engine/VIEngine/Core/Event/: EventAction.h  EventContext.h  EventDispatcher.cpp  EventDispatcher.h  IEvent.h
Engine/VIEngine/Core/GameObject/: GameObject.cpp  GameObject.h
Engine/VIEngine/Core/Input/: GLFWInput.cpp  InputState.h  KeyCode.h
Engine/VIEngine/Core/Layer/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
Engine/VIEngine/Core/Logger/: Logger.cpp  Logger.h
Engine/VIEngine/Core/System/: ActorStateCachingSystem.cpp  ActorStateCachingSystem.h  DirtySpriteValidateSystem.cpp  DirtySpriteValidateSystem.h  DirtySpriteValidationSystem.cpp  DirtySpriteValidationSystem.h  InputSystem.h  SpriteAnimationSystem.cpp  SpriteAnimationSystem.h  SpriteRendererSystem.cpp  SpriteRendererSystem.h  System.cpp  System.h
Engine/VIEngine/Core/Time/: Time.h
Engine/VIEngine/Core/Type/: Actor.cpp  Actor.h  Cast.h  Component.h  Object.cpp  Object.h  RTTI.cpp  RTTI.h
Engine/VIEngine/Core/Window/: GLFWPlatformWindow.cpp  Window.cpp  Window.h
Engine/VIEngine/ECS/: ComponentManager.cpp  ComponentManager.h  Coordinator.cpp  Coordinator.h  ECSType.h  EntityManager.cpp  EntityManager.h  IComponent.h  ISystem.h  SystemManager.cpp  SystemManager.h
Engine/VIEngine/JobSystem/: ThreadPool.cpp  ThreadPool.h
Engine/VIEngine/Math/: Math.h  Matrix3.h  Matrix4.cpp  Matrix4.h  Quaternion.h  Utils.h  Vector.cpp  Vector.h
Engine/VIEngine/Memory/: LinearAllocator.cpp  MemoryAllocator.cpp  MemoryAllocator.h  MemoryChunkManager.h  MemoryManager.cpp  MemoryManager.h  MemoryMonitor.cpp  MemoryMonitor.h  PoolAllocator.cpp  StackAllocator.cpp
Engine/VIEngine/Memory/Allocator/: LinearAllocator.cpp  MemoryAllocator.cpp  MemoryAllocator.h  PoolAllocator.cpp  StackAllocator.cpp
Engine/VIEngine/Renderer/: BatchRenderer.cpp  BatchRenderer.h  OpenGLRenderCommand.cpp  RenderBatch.cpp  RenderBatch.h  RenderCommand.cpp  RenderCommand.h  RenderCommandCallback.cpp  RenderCommandCallback.h  RenderCommandQueue.cpp  RenderCommandQueue.h  Renderer.cpp  Renderer.h  RendererAPI.h
Engine/VIEngine/Renderer/API/: OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  RendereAPIFactory.cpp  RendererAPI.cpp  RendererAPI.h  RendererAPIFactory.h
Engine/VIEngine/Renderer/Camera/: Camera.cpp  Camera.h
Engine/VIEngine/Renderer/OpenGL/: OpenGLFactory.cpp  OpenGLFactory.h  OpenGLIndexBuffer.cpp  (+12 more)
Engine/VIEngine/Resource/: IndexBuffer.cpp  IndexBuffer.h  Resource.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  Texture2D.cpp  Texture2D.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexFormat.cpp  VertexFormat.h
Engine/VIEngine/Scene/: Scene.cpp  Scene.h
Engine/VIEngine/Window/: GLFWPlatformWindow.cpp  Window.h  WindowPlatform.cpp  WindowPlatform.h
Game/: CMakeLists.txt
Game/Assets/: quad.glsl
Game/Assets/Shader/: quad.glsl  render-batch.glsl  sprite.glsl
Game/Source/: EditorLayer.h  Game.cpp  GameplaLayer.cpp  GameplayLayer.cpp  GameplayLayer.h
Game/Source/Layer/: EditorLayer.cpp  EditorLayer.h
Memory/: CMakeLists.txt
Memory/Source/: Base.h  MemoryManager.cpp  MemoryManger.h
Memory/Source/Allocator/: IAllocator.cpp  IAllocator.h  PoolAllocator.cpp
(+7 files in other folders)
